--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,11 +14,13 @@
     <string name="back">返回</string>
     
     <string name="signUp">注册</string>
+    <string name="signUpByPhone">用手机注册</string>
+    <string name="signUpByEmail">用邮箱注册</string>
     <string name="signIn">登录</string>
-    <string name="userIDPrompt">请输入手机号/邮箱</string>
-    <string name="passwordPrompt">请输入密码</string>
-    <string name="newPasswordPrompt">请输入新密码</string>
-    <string name="confirmPasswordPrompt">请确认密码</string>
+    <string name="inputUsername">请输入手机号/邮箱</string>
+    <string name="inputPassword">请输入密码</string>
+    <string name="inputNewPassword">请输入新密码</string>
+    <string name="inputConfirmPassword">请确认密码</string>
     <string name="forgotPassword">忘记密码</string>
     <string name="findPasswordByPhone">用手机找回</string>
     <string name="findPasswordByEmail">用邮箱找回</string>
@@ -70,7 +72,7 @@
     <string name="changePassword">修改密码</string>
     <string name="inputCompanyName">请输入公司名称</string>
     <string name="inputNickname">请输入昵称</string>
-    <string name="oldPasswordPrompt">请输入旧密码</string>
+    <string name="inputOldPassword">请输入旧密码</string>
     <string name="confirmNewPasswordPrompt">请确认新密码</string>
 
 </resources>
