--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -99,4 +99,20 @@
     <string name="inputUserContact">请输入对方手机号或邮箱</string>
     <string name="agree">同意</string>
 
+    <string-array name="itemSpinner">
+        <item>全选</item>
+        <item>预审核</item>
+        <item>已消费</item>
+        <item>未添加进报告</item>
+        <item>标签</item>
+    </string-array>
+
+    <string-array name="reportSpinner">
+        <item>全选</item>
+        <item>待审核</item>
+        <item>已提交</item>
+        <item>已通过</item>
+        <item>已退回</item>
+        <item>已结束</item>
+    </string-array>
 </resources>
