--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="back">返回</string>
     <string name="modify">修改</string>
     <string name="warning">警告</string>
+    <string name="filter">筛选</string> 
     
     <string name="signUp">注册</string>
     <string name="signUpByPhone">用手机注册</string>
@@ -60,7 +61,7 @@
     <string name="notAvailable">N/A</string>
     <string name="deleteItemWarning">是否要删除此条目？</string>
     <string name="deleteSucceed">删除成功</string>
-    <string name="deleteFailed">删除失败</string> 
+    <string name="deleteFailed">删除失败</string>
     
     <string name="myReport">我的报告</string>
     <string name="approveReport">待审批报告</string>
