--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="back">返回</string>
     <string name="modify">修改</string>
     <string name="warning">警告</string>
+    <string name="search">搜索</string> 
+    <string name="sort">排序</string> 
     <string name="filter">筛选</string> 
     
     <string name="signUp">注册</string>
