--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -81,6 +81,10 @@
     <string name="myReport">我的报告</string>
     <string name="othersReport">其他人的报告</string>
     <string name="inputReportTitle">请输入报告名称</string>
+    <string name="addComment">添加评论</string>
+    <string name="checkComment">查看评论</string>
+    <string name="inputComment">请输入评论</string>
+    <string name="noComment">没有任何评论</string>
     <string name="noManager">未选择经理</string>
     <string name="noCC">未选择CC</string>
     <string name="chooseManager">选择经理</string>
