--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,6 +73,8 @@
     <string name="inputVendor">请输入商家名或点击按钮选取</string>
     <string name="inputNote">请输入备注</string>
     <string name="inputKeyword">请输入关键字</string>
+    <string name="onlySave">仅保存</string>
+    <string name="sendToApprove">发送审批</string>
     <string name="notAvailable">N/A</string>
     <string name="deleteItemWarning">是否要删除此条目？</string>
     <string name="deleteSucceed">删除成功</string>
