--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="reimbursement">报销</string>
     <string name="report">报告</string>
     <string name="statistics">统计</string>
-    <string name="me">我！</string>
+    <string name="me">自己</string>
     
     <string name="sort">排序</string> 
     <string name="sortNull">无</string>
