--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -128,6 +128,8 @@
     <string name="inputUserContact">请输入对方手机号或邮箱</string>
     <string name="agree">同意</string>
     <string name="noInvites">没有收到任何邀请</string>
+    <string name="noCategories">当前没有任何分类</string>
+    <string name="noTags">当前没有任何标签</string>
     <string name="getInvoicePrompt">发票抬头请开：</string>
     
     <string name="xlistview_header_hint_normal">下拉刷新</string>
