--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -60,19 +60,24 @@
     <string name="proveAhead">预审批</string>
     <string name="paAmount">预审批金额：</string>
     <string name="needReimburse">需报销</string>
-    <string name="vendor">商家:</string>
     <string name="category">类别:</string>
+    <string name="vendor">商家:</string>
+    <string name="location">城市:</string>
+    <string name="currentLocation">当前城市:</string>
+    <string name="locationInvalid">未获取到城市信息</string>
     <string name="tag">标签:</string>
     <string name="member">参与人员:</string>
     <string name="time">消费时间:</string>
     <string name="note">备注:</string>
-    <string name="chooseVendor">选择商家</string>
     <string name="chooseCategory">选择类别</string>
+    <string name="chooseVendor">选择商家</string>
+    <string name="chooseLocation">选择城市</string>
     <string name="chooseTag">选择标签</string>
     <string name="chooseDate">选择日期</string>
     <string name="chooseTime">选择时间</string>
     <string name="chooseMember">参与人员</string>
     <string name="inputVendor">请输入商家名或点击按钮选取</string>
+    <string name="inputLocation">请输入城市</string>
     <string name="inputNote">请输入备注</string>
     <string name="inputKeyword">请输入关键字</string>
     <string name="onlySave">仅保存</string>
