--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,10 +42,10 @@
     <string name="sort">排序</string> 
     <string name="sortNull">无</string>
     <string name="sortAmount">金额</string>
-    <string name="sortUpdateDate">修改时间</string>
     <string name="sortItemsCount">条目数</string>
-    <string name="sortCreateDate">创建日期</string>
-    <string name="sortModifyDate">修改日期</string>
+    <string name="sortUpdateDate">修改时间</string>
+    <string name="sortCreateDate">创建时间</string>
+    <string name="sortConsumedDate">消费时间</string>
     <string name="filter">筛选</string>
     <string name="filterAll">全部</string>
     <string name="filterProveAhead">预审批</string>
