--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="add">添加</string>
     <string name="back">返回</string>
     <string name="modify">修改</string>
+    <string name="tip">提示</string>
+    <string name="error">错误</string>
     <string name="warning">警告</string>
     <string name="search">搜索</string>
     
