--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="on">开</string>
     <string name="off">关</string>
     <string name="nullString"></string>
+    <string name="rmb">¥</string>
     
     <string name="confirm">确定</string>
     <string name="save">保存</string>
@@ -18,6 +19,7 @@
     <string name="error">错误</string>
     <string name="warning">警告</string>
     <string name="search">搜索</string>
+    <string name="status">状态</string>
     
     <string name="signUp">注册</string>
     <string name="signUpByPhone">用手机注册</string>
@@ -56,7 +58,7 @@
     <string name="filterConsumed">已消费</string>
     <string name="filterAdded">已添加到报告</string>
     <string name="filterFree">未添加到报告</string>
-    <string name="filterTags">标签</string>
+    <string name="filterTags">标签</string>    
     
     <string name="inputAmount">请输入金额</string>
     <string name="invoice">发票</string>
@@ -64,15 +66,15 @@
     <string name="proveAhead">预申请</string>
     <string name="paAmount">预申请金额：</string>
     <string name="needReimburse">需报销</string>
-    <string name="category">类别:</string>
-    <string name="vendor">商家:</string>
-    <string name="location">城市:</string>
+    <string name="category">类别</string>
+    <string name="vendor">商家</string>
+    <string name="location">城市</string>
     <string name="currentLocation">当前城市:</string>
     <string name="locationInvalid">未获取到城市信息</string>
-    <string name="tag">标签:</string>
+    <string name="tag">标签</string>
     <string name="member">参与人员:</string>
-    <string name="time">消费时间:</string>
-    <string name="note">备注:</string>
+    <string name="time">消费时间</string>
+    <string name="note">备注</string>
     <string name="chooseCategory">选择类别</string>
     <string name="chooseVendor">选择商家</string>
     <string name="chooseLocation">选择城市</string>
