--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="add">添加</string>
     <string name="back">返回</string>
     <string name="modify">修改</string>
+    <string name="remove">删除</string>
     <string name="tip">提示</string>
     <string name="error">错误</string>
     <string name="warning">警告</string>
@@ -87,8 +88,9 @@
     <string name="chooseTag">选择标签</string>
     <string name="chooseDate">选择日期</string>
     <string name="chooseTime">选择时间</string>
-    <string name="chooseMember">参与人员</string>
-    <string name="inputVendor">请输入商家名或点击按钮选取</string>
+    <string name="chooseMember">选择参与人员</string>
+    <string name="chooseFromCamera">拍照</string>
+    <string name="chooseFromGallery">从手机相册选择</string>
     <string name="inputLocation">请输入城市</string>
     <string name="inputNote">请输入备注</string>
     <string name="inputKeyword">请输入关键字</string>
