--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -85,6 +85,7 @@
     <string name="chooseCategory">选择类别</string>
     <string name="chooseVendor">选择商家</string>
     <string name="chooseLocation">选择城市</string>
+    <string name="allCities">全部城市</string>
     <string name="chooseTag">选择标签</string>
     <string name="chooseDate">选择日期</string>
     <string name="chooseTime">选择时间</string>
